--- a/public/assets/bootstrap/css/style.css
+++ b/public/assets/bootstrap/css/style.css
@@ -5,3 +5,12 @@
 body {
     font-family: 'Poppins', sans-serif;
 }
+
+.hover-card {
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.hover-card:hover {
+    transform: translateY(-15px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
